# VitalDB-State-Selection-Reconstructed

./: .gitattributes  .gitignore  PHASE_STATUS.md  README.md  pyproject.toml
analysis/: plot_phase8f_results.py
configs/: eligibility_audit.yaml  track_aliases.yaml
docs/: audit_framework_contract.md  causal_grid_window_feasibility_report.md  claim_boundary.md  compliance_matrix.csv  control_focused_2x2_factorial_design.md  control_focused_research_question.md  decision_support_report.md  eligibility_audit_plan.md  engineering_dry_run_report.md  final_cohort_freeze_report.md  full_metadata_track_inventory_audit_report.md  legacy_98case_statement.md  legacy_source_snapshot.json  migration_inventory_summary.md  migration_provenance.csv  phase7a_subject_linkage_audit_report.md  phase7b_control_design_report.md  phase7c_drug_rate_semantics_report.md  phase7c_excluded_scope_changes.md  phase7c_implementation_path_comparison.md  phase7c_lab_code_request_checklist.md  phase7c_minimal_implementation_roadmap.md  phase7c_observation_quality_minimum_plan.md  phase7c_ppo_simulator_reuse_audit.md  phase7d_excluded_scaffold_backup_verification.md  phase7d_lab_code_handoff.md  phase7d_lab_request_ko.md  phase7d_online_observation_contract_report.md  phase7e_paper_grounded_reconstruction_specification.md  phase7f_pkpd_scientific_validation_report.md  phase7f_report.md  phase7f_stage_i_decision_record.md  phase7g_report.md  phase7g_stage_ii_validation_report.md  phase7h_adapter_validation_report.md  phase7h_determinism_report.md  phase7h_ppo_integration_smoke_report.md  (+32 more)
(+361 files in other folders)
